--- a/interactive-pricing-component-main/src/App.css
+++ b/interactive-pricing-component-main/src/App.css
@@ -1,10 +1,10 @@
-.app{
+.app {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.container{
+.container {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -15,17 +15,17 @@
     gap: 50px;
 }
 
-.header{
+.header {
     /* margin-top: 56px; */
     text-align: center;
 }
 
-.heading{
+.heading {
     color: hsl(227, 35%, 25%);
     font-weight: 800;
 }
 
-.sub-heading{
+.sub-heading {
     color: hsl(225, 20%, 60%);
     line-height: 32px;
     font-size: 15px;
@@ -33,7 +33,7 @@
 }
 
 /* PRICING CARD */
-.pricing-card{
+.pricing-card {
     /* margin-top: 100px; */
     background-color: hsl(0, 0%, 100%);
     display: flex;
@@ -43,20 +43,24 @@
     padding: 35px;
     width: 420px;
     position: relative;
-    box-shadow: 0px 15px 15px 0px hsl(224, 65%, 95%);;
+    box-shadow: 0px 15px 15px 0px hsl(224, 65%, 95%);
+    ;
 }
-.header-text{
+
+.header-text {
     display: flex;
     justify-content: space-between;
 }
-.pg-text{
+
+.pg-text {
     color: hsl(225, 20%, 60%);
     font-size: 15px;
     font-weight: 600;
     position: relative;
     top: 8px;
 }
-.plan-text{
+
+.plan-text {
     color: hsl(225, 20%, 60%);
     font-size: 15px;
     font-weight: 600;
@@ -64,37 +68,41 @@
     bottom: 4px;
     padding-left: 5px;
 }
-.price{
-    color:hsl(227, 35%, 25%);
+
+.price {
+    color: hsl(227, 35%, 25%);
     font-size: 27px;
     font-weight: 800;
 }
 
-.slider-container{
+.slider-container {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     padding: 24px 0;
 }
-.slider-container input{
+
+.slider-container input {
     width: 97%;
 }
 
-.toggler-section{
+.toggler-section {
     display: flex;
     justify-content: center;
     align-items: center;
     padding-top: 20px;
 }
-.small-gray-text{
+
+.small-gray-text {
     color: hsl(225, 20%, 60%);
     font-size: 12px;
     padding: 0 3px;
     font-weight: 500;
     padding: 0 4px;
 }
-.discount-text{
+
+.discount-text {
     padding: 2px;
     background-color: hsl(14, 92%, 95%);
     font-size: 10px;
@@ -103,7 +111,7 @@
     border: 7px;
 }
 
-.border{
+.border {
     width: 123%;
     height: 3px;
     background-color: hsl(230, 100%, 99%);
@@ -112,24 +120,26 @@
     margin: 25px 0;
 }
 
-.card-footer{
+.card-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.features{
+.features {
     display: flex;
     flex-direction: column;
 }
-.features p{
+
+.features p {
     margin: 3px 0;
 }
-.features p img{
+
+.features p img {
     padding: 0 8px;
 }
 
-.card-footer button{
+.card-footer button {
     cursor: pointer;
     padding: 8px 0;
     width: 120px;
@@ -140,7 +150,7 @@
 }
 
 /* toggler */
-.switch{
+.switch {
     position: relative;
     display: inline-block;
     width: 33px;
@@ -148,12 +158,14 @@
     background-color: hsl(223, 50%, 87%);
     border-radius: 50px;
 }
-.switch input{
+
+.switch input {
     opacity: 0;
     width: 0;
     height: 0;
 }
-.toggler{
+
+.toggler {
     position: absolute;
     cursor: pointer;
     top: 0px;
@@ -165,7 +177,8 @@
     border-radius: 50px;
     transition: all .4s ease;
 }
-.toggler:before{
+
+.toggler:before {
     position: absolute;
     cursor: pointer;
     top: 2px;
@@ -177,72 +190,108 @@
     border-radius: 100%;
     transition: all .4s ease;
 }
-.toggler:hover{
+
+.toggler:hover {
     background-color: hsl(174, 77%, 80%);
 }
-input:checked + .toggler{
+
+input:checked+.toggler {
     background-color: hsl(174, 86%, 45%);
 }
-input:checked + .toggler:before{
+
+input:checked+.toggler:before {
     transform: translateX(16px);
 }
 
 /* Slider */
 .slider {
-  -webkit-appearance: none;
-  width: 85%;
-  height: 10px;
-  border-radius: 5px;
-  background: hsl(224, 65%, 95%);;
-  outline: none;
-  /* overflow: hidden; */
-}
-.slider::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  appearance: none;
-  width: 33px;
-  height: 33px;
-  border-radius: 50%;
-  border: none;
-  background: url('./images/icon-slider.svg');
-  background-color: hsl(174, 86%, 45%);;
-  background-repeat: no-repeat;
-  background-position: 50%, 50%;
-  cursor: pointer;
-  box-shadow: 0 15px 15px 2px hsl(174, 77%, 80%);;
-  transition: 0.4s;
-}
-.slider::-webkit-slider-thumb:hover {
-  background-color: hsl(174, 77%, 80%);
+    -webkit-appearance: none;
+    width: 85%;
+    height: 10px;
+    border-radius: 5px;
+    background: hsl(224, 65%, 95%);
+    ;
+    outline: none;
+    /* overflow: hidden; */
 }
 
-.text::before{
+.slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    border: none;
+    background: url('./images/icon-slider.svg');
+    background-color: hsl(174, 86%, 45%);
+    ;
+    background-repeat: no-repeat;
+    background-position: 50%, 50%;
+    cursor: pointer;
+    box-shadow: 0 15px 15px 2px hsl(174, 77%, 80%);
+    ;
+    transition: 0.4s;
+}
+
+.slider::-webkit-slider-thumb:hover {
+    background-color: hsl(174, 77%, 80%);
+}
+
+.slider::-moz-range-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 33px;
+    height: 33px;
+    border-radius: 50%;
+    border: none;
+    background: url('./images/icon-slider.svg');
+    background-color: hsl(174, 86%, 45%);
+    ;
+    background-repeat: no-repeat;
+    background-position: 50%, 50%;
+    cursor: pointer;
+    box-shadow: 0 15px 15px 2px hsl(174, 77%, 80%);
+    ;
+    transition: 0.4s;
+}
+
+.slider::-moz-range-progress :hover {
+    background-color: hsl(174, 77%, 80%);
+}
+
+.text::before {
     content: "25% discount";
 }
+
 @media screen and (max-width: 460px) {
-    .pricing-card{
+    .pricing-card {
         width: 90%;
     }
-    .card-footer{
+
+    .card-footer {
         flex-direction: column;
         row-gap: 20px;
         text-align: center;
     }
-    .border{
+
+    .border {
         width: 140%;
         left: -14%;
     }
-    .header-text{
+
+    .header-text {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         row-gap: 20px;
         position: relative;
     }
-    .text::before{
+
+    .text::before {
         content: "-25%";
     }
-    .discount-text{
+
+    .discount-text {
         border-radius: 21px;
         padding: 2px 5px;
     }
