--- a/interactive-pricing-component-main/src/App.css
+++ b/interactive-pricing-component-main/src/App.css
@@ -210,9 +210,7 @@ input:checked+.toggler:before {
     height: 10px;
     border-radius: 5px;
     background: hsl(224, 65%, 95%);
-    ;
     outline: none;
-    /* overflow: hidden; */
 }
 
 .slider::-webkit-slider-thumb {
@@ -224,12 +222,10 @@ input:checked+.toggler:before {
     border: none;
     background: url('./images/icon-slider.svg');
     background-color: hsl(174, 86%, 45%);
-    ;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
     cursor: pointer;
     box-shadow: 0 15px 15px 2px hsl(174, 77%, 80%);
-    ;
     transition: 0.4s;
 }
 
@@ -237,6 +233,7 @@ input:checked+.toggler:before {
     background-color: hsl(174, 77%, 80%);
 }
 
+/* Firefox */
 .slider::-moz-range-thumb {
     -webkit-appearance: none;
     appearance: none;
@@ -246,17 +243,17 @@ input:checked+.toggler:before {
     border: none;
     background: url('./images/icon-slider.svg');
     background-color: hsl(174, 86%, 45%);
-    ;
     background-repeat: no-repeat;
     background-position: 50%, 50%;
     cursor: pointer;
     box-shadow: 0 15px 15px 2px hsl(174, 77%, 80%);
-    ;
     transition: 0.4s;
 }
 
-.slider::-moz-range-progress :hover {
+.slider::-moz-range-progress {
     background-color: hsl(174, 77%, 80%);
+    height: 10px;
+    border-radius: 5px;
 }
 
 .text::before {
